prettify oas doc
